# mznn

./: .gitignore  clean.sh  configure.sh
aad/: CMakeLists.txt
aad/.cache/clangd/index/: Tape.hpp.747D43E2F281BF2D.idx  addutils.cpp.AE502CC16C6D4BC3.idx  addutils.hpp.7BCF126C01DE3945.idx  globals.cpp.6930E3AF6B8D4DDD.idx  globals.hpp.7B710BE478A0821B.idx  mempool.cpp.797C52CB1E735AEC.idx  mempool.hpp.C99B26C0B4BFA2F6.idx  node.hpp.F8DBA03CB7BD0097.idx  test_MemPool.cpp.925CF92110B239FC.idx  test_Tape.cpp.3F00CD4A8025774E.idx
aad/include/: EigenSupport.hpp  Tape.hpp  addutils.hpp  autodiff.hpp  globals.hpp  mempool.hpp  mempool.hpp~  node.hpp  scalar.hpp
aad/include/ops/: op_declarations.hpp  op_definitions.hpp
aad/include/ops/op_declarations/: BinaryArithmeticOpDeclarations.hpp  CommonMathOperations.hpp  HyperTrigDeclarations.hpp  LogicalOperatorDeclarations.hpp  OpsRequiredByEigenDeclarations.hpp  TrigDeclarations.hpp
aad/include/ops/op_definitions/: BinaryArithmeticOverloads.hpp  CommonMathOperationDefinitions.hpp  HyperTrigFunctionOverload.hpp  LogicalOperatorDefinitions.hpp  OpsRequiredByEigenOverloads.hpp  TrigFunctionOverloads.hpp  UnaryOperatorOverloads.hpp
aad/source/: addutils.cpp  autodiff.cpp  globals.cpp  mempool.cpp
aad/tests/: #junk.cpp#  #test_MemPool.cpp#  CMakeLists.txt  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  junk.cpp  test_MemPool.cpp  test_MemPool.cpp~  test_Scalar.cpp  test_Tape.cpp  test_arithmetic_operator_overloads.cpp  test_const_nodes.cpp  test_eigen.cpp  test_hyper_trig.cpp  test_logical_operations.cpp  test_math_ops.cpp  test_memory_management.cpp  test_node.cpp  test_number.cpp  test_required_by_eigen.cpp  test_tensor.cpp  test_trig.cpp
datasets/: datagen-linear-regression.py
linear-regression/: CMakeLists.txt  linearRegression.cpp  linearRegression.hpp  linearRegressionMain.cpp
logging/: CMakeLists.txt  LogManager.cpp  LogManager.hpp  log.hpp
logging/.cache/clangd/index/: Log.cpp.8F9701D48F760013.idx  Log.hpp.B7AAF0C99C162751.idx  LogManager.cpp.710409D4F40BF3FF.idx  LogManager.hpp.E371B91F918ADC4E.idx  junk.cpp.393DB343D3E3E68F.idx  log.hpp.8373CCA66AC859B8.idx
logging/include/: LogManager.hpp  log.hpp
